# qakeapi

./: .coverage  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  AWESOME_LISTS_SETUP.md  CHANGELOG.md  CLEANUP_PLAN.md  CODE_CLEANUP_REPORT.md  CONTRIBUTING.md  CREATE_PRS_NOW.md  Contributing.md  DEMO_INFO.txt  Dockerfile  EXAMPLES_TESTING_REPORT.md  EXAMPLES_TEST_REPORT.md  FINAL_STATUS.md  GITHUB_PAGES_SETUP.md  LICENSE  MANUAL_PR_INSTRUCTIONS.md  MARKETING_GUIDE.md  OPEN_SOURCE_CHECKLIST.md  POPULARITY_ANALYSIS.md  PROJECT_PROMOTION.md  PROJECT_SUMMARY.md  PUBLICATION_GUIDE.md  PUBLISH_TO_PYPI.md  PYPI_UPLOAD_SUCCESS.md  QAKAPI_VS_FASTAPI.md  QUICKSTART.md  README.md  README_RU.md  RECOMMENDATIONS.md  RELEASE_NOTES.md  RELEASE_v1.1.0.md  SECURITY.md  SUBMIT_TO_AWESOME_LISTS.md  TODO.md  UPLOAD_INSTRUCTIONS.md  (+25 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  PYPI_SETUP.md  TOPICS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  code-quality.yml  docs.yml  release.yml  test-examples.yml  tests.yml
COMMUNITY/: index.html
DISCOVERABILITY/: index.html
api-reference/: index.html
background-tasks/: index.html
benchmarks/: README.md  index.html  run_benchmarks.py
benchmarks-results/: index.html
cookbook/: index.html
dependency-injection/: index.html
docs/: API_REFERENCE.md  COMMUNITY.md  DISCOVERABILITY.md  GUIDE.md  Makefile  README.md  api-reference.md  background-tasks.md  benchmarks-results.md  benchmarks.md  build_docs.py  conf.py  cookbook.md  dependency-injection.md  ecosystem.md  events.rst  file-upload.md  getting-started.md  index.md  index.rst  middleware.md  middleware.rst  migration-from-fastapi.md  openapi.md  parallel.md  pipelines.md  reactive.md  routing.md  tutorial.md  websocket.md  websockets.rst
docs/_static/: custom.css
docs/advanced/: index.md
docs/getting-started/: index.md
docs/guide/: index.md
ecosystem/: index.html
examples/: README.md  __init__.py  advanced_app.py  auth_app.py  auth_example.py  background_tasks_app.py  basic_app.py  basic_demo.py  basic_example.py  basic_features.py  caching_app.py  caching_example.py  complete_api_example.py  complete_example.py  comprehensive_demo.py  compression_example.py  config.py  cors_app.py  database_example.py  dependency_injection_example.py  enhanced_app.py  enhanced_full_demo.py  error_handling_example.py  file_upload_example.py  financial_calculator.py  jwt_auth_app.py  jwt_sqlite_example.py  logging_example.py  monitoring_example.py  profiling_app.py  rate_limit_app.py  rate_limit_example.py  rate_limiting_example.py  redis_example.py  requirements.txt  run.py  security_app.py  simple_app.py  simple_demo.py  simple_swagger_test.py  (+11 more)
examples/common/: auth_middleware.py  auth_models.py  websocket_utils.py
examples_app/: advanced_testing_app.py  api_versioning_app.py  auth_app.py  background_tasks_app.py  basic_crud_app.py  caching_app.py  csrf_app.py  dependency_injection_app.py  enhanced_documentation_app.py  enhanced_testing_example.py  file_upload_app.py  jwt_auth_app.py  live_reload_app.py  middleware_app.py  openapi_app.py  optimization_app.py  profiling_app.py  rate_limit_app.py  run_all_tests.py  sql_injection_app.py  sql_injection_example.db  start_all_apps.py  template_app.py  validation_app.py  websocket_app.py  websocket_enhanced_app.py  xss_app.py
file-upload/: index.html
getting-started/: index.html
middleware/: index.html
migration-from-fastapi/: index.html
openapi/: index.html
parallel/: index.html
pipelines/: index.html
qakeapi/: __init__.py  cache.py
qakeapi/api/: __init__.py  deprecation.py  graphql.py  versioning.py  versioning_middleware.py
qakeapi/caching/: __init__.py  cache.py  middleware.py
qakeapi/cli/: __init__.py  main.py
qakeapi/config/: __init__.py  settings.py
qakeapi/core/: __init__.py  application.py  background.py  cache.py  clustering.py  dependencies.py  error_handling.py  events.py  exceptions.py  files.py  interfaces.py  logging.py  middleware.py  middleware_core.py  negotiation.py  openapi.py  optimization.py  request.py  requests.py  response.py  responses.py  router.py  routing.py  validation.py  websocket.py  websockets.py
qakeapi/database/: __init__.py  pool.py
qakeapi/middleware/: __init__.py  auth.py  base.py  compression.py  cors.py  logging.py
qakeapi/monitoring/: __init__.py  health.py  metrics.py
qakeapi/security/: __init__.py  auth.py  authentication.py  authorization.py  cors.py  csrf.py  headers.py  jwt.py  jwt_auth.py  password.py  rate_limit.py  rate_limiting.py  sql_protection.py  validation.py  websocket_auth.py  xss.py
qakeapi/templates/: __init__.py  jinja2.py  live_reload.py  renderers.py
qakeapi/testing/: __init__.py  advanced.py  client.py  database.py  fixtures.py  load_testing.py  mocks.py  performance.py
qakeapi/utils/: __init__.py  static.py  status.py  templates.py  validation.py
qakeapi/validation/: __init__.py  interfaces.py  models.py  (+1 more)
reactive/: index.html
routing/: index.html
search/: search_index.json
static/: script.js  style.css
templates/: about.html  base.html  contact.html  enhanced_demo.html  index.html  users.html
tests/: README.md  __init__.py  conftest.py  test_advanced_testing.py  test_api_versioning.py  test_api_versioning_enhanced.py  test_application.py  test_background.py  test_basic.py  test_caching.py  test_comprehensive.py  test_compression.py  test_cors.py  test_dependencies.py  test_enhanced_documentation.py  test_enhanced_testing.py  test_error_handling.py  test_event_driven.py  test_graphql.py  test_http.py  test_integration.py  test_jwt_auth.py  test_live_reload.py  test_middleware.py  test_negotiation.py  test_new_features.py  test_openapi.py  test_rate_limit.py  test_request.py  test_response.py  test_router.py  test_routing.py  test_routing_core.py  test_security.py  test_security_xss.py  test_templates.py  test_testing_client.py  test_utils.py  test_validation.py  test_validation_core.py  (+6 more)
tutorial/: index.html
websocket/: index.html
(+13 files in other folders)
