[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qakeapi"
version = "0.1.0"
description = "A modern ASGI web framework"
authors = [
    {name = "Craxti", email = "fetis.dev@gmail.com"}
]
dependencies = [
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.25.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.poetry]
name = "qakeapi"
version = "0.1.0"
description = "A custom async web framework inspired by FastAPI and Starlette"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.5.0"
uvicorn = "^0.24.0"
websockets = "^12.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 