[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qakeapi"
version = "0.1.0"
description = "Modern asynchronous web framework for Python with built-in monitoring, caching, and CLI tools"
authors = [
    {name = "QakeAPI Team", email = "team@qakeapi.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["web", "framework", "async", "api", "rest", "websocket", "monitoring", "metrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Environment :: Web Environment",
]
dependencies = [
    # Основные зависимости
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "anyio>=3.6.0",
    
    # CLI инструменты
    "click>=8.0.0",
    
    # Безопасность
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
    "bcrypt>=4.0.0",
    
    # Мониторинг
    "psutil>=5.9.0",
    
    # Дополнительные зависимости для расширенных функций
    "aiohttp>=3.8.0",
    "PyJWT>=2.8.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
# Разработка
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "coverage>=7.0.0",
    "pre-commit>=3.0.0",
]

# Документация
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-swagger-ui-tag>=0.6.0",
]

# Базы данных
database = [
    "asyncpg>=0.28.0",      # PostgreSQL
    "aiomysql>=0.2.0",      # MySQL
    "aiosqlite>=0.19.0",    # SQLite
    "sqlalchemy>=2.0.0",    # ORM поддержка
]

# Кэширование
cache = [
    "redis>=4.5.0",         # Redis
    "aioredis>=2.0.0",      # Async Redis
]

# Мониторинг и метрики
monitoring = [
    "prometheus-client>=0.17.0",  # Prometheus метрики
    "structlog>=23.0.0",          # Структурированное логирование
]

# Производительность
performance = [
    "orjson>=3.9.0",        # Быстрый JSON
    "brotli>=1.0.0",        # Brotli сжатие
    "lz4>=4.0.0",           # LZ4 сжатие
]

# Все дополнительные возможности
all = [
    "qakeapi[database,cache,monitoring,performance]",
]

[project.scripts]
qakeapi = "qakeapi.cli.main:cli"

[project.urls]
Homepage = "https://github.com/qakeapi/qakeapi"
Documentation = "https://qakeapi.dev"
Repository = "https://github.com/qakeapi/qakeapi"
Issues = "https://github.com/qakeapi/qakeapi/issues"

[tool.setuptools.packages.find]
include = ["qakeapi*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
