[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qakeapi"
version = "1.1.0"
description = "Modern asynchronous web framework for Python - all methods implemented independently"
authors = [
    {name = "QakeAPI Team", email = "team@qakeapi.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["web", "framework", "async", "api", "rest", "websocket"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
]

# Minimal dependencies - only for running (uvicorn)
# All core functionality uses only Python standard library
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

# Only for running the server
server = [
    "uvicorn>=0.24.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
/(
    # Files with formatting differences between local and CI black
    qakeapi/api/versioning_middleware.py
    | qakeapi/core/interfaces.py
    | qakeapi/core/error_handling.py
    | qakeapi/security/headers.py
    | qakeapi/security/xss.py
    | qakeapi/testing/load_testing.py
    | tests/test_websocket_auth.py
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
